--- a/advanced.html
+++ b/advanced.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
+    <title>Advanced Calculator</title>
+    <script src="advanced.js" defer ></script>
     <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>
 </head>
 <body>
-  <a href="advanced.html">
-    <button>Advanced</button>
-  </a>
+    <a href="index.html">
+    <button> Home</button>
+    </a>
+    
 </body>
 </html>
